--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ pip-log.txt
 pip-delete-this-directory.txt
 Pipfile
 Pipfile.lock
-
+Procfile
+runtime.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
