--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,27 @@
-Flask == 1.1.2
-Werkzeug == 1.0.1
-gunicorn == 20.0.4
+aigpy==2020.9.14.0
+appdirs==1.4.4
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+configparser==5.0.0
+distlib==0.3.1
+filelock==3.0.12
+Flask==1.1.2
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+mutagen==1.45.1
+pipenv==2020.11.15
+prettytable==0.7.2
+pycryptodome==3.9.8
+pydub==0.24.1
+requests==2.24.0
+six==1.15.0
+tidal-dl==2020.9.10.0
+urllib3==1.25.10
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
+Werkzeug==1.0.1
