--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,4 @@ services:
       ports: 
         - 5405:5432
       volumes: 
-        - ./postgres-data:/var/lib/postgresql/data
+        - ~/dockerdata/postgresql:/var/lib/postgresql/data
