Change api service volumes path.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports: 
       - 5000:5000
     volumes: 
-      - ./app:/usr/src/app/app
+      - ./easyscoreboard/:/usr/src/app
     restart: always
   
   database:
