--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aigpy==2020.9.14.0
+alembic==1.5.4
 appdirs==1.4.4
 certifi==2020.6.20
 chardet==3.0.4
@@ -8,18 +9,26 @@ configparser==5.0.0
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
+Mako==1.1.4
 MarkupSafe==1.1.1
 mutagen==1.45.1
 pipenv==2020.11.15
 prettytable==0.7.2
+psycopg2-binary==2.8.6
 pycryptodome==3.9.8
 pydub==0.24.1
+python-dateutil==2.8.1
+python-editor==1.0.4
 requests==2.24.0
 six==1.15.0
+SQLAlchemy==1.3.23
 tidal-dl==2020.9.10.0
 urllib3==1.25.10
 virtualenv==20.4.2
