--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:mysecretpassword@0.0.0.0:5432/easyscoreboard
+sqlalchemy.url = 
 
 
 [post_write_hooks]
