--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ configparser==5.0.0
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
+flask-marshmallow==0.14.0
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
@@ -18,6 +19,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.22.3
 mutagen==1.45.1
 pipenv==2020.11.15
 prettytable==0.7.2
