--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ psycopg2-binary==2.8.6
 pycryptodome==3.9.8
 pydub==0.24.1
 python-dateutil==2.8.1
+python-dotenv==0.15.0
 python-editor==1.0.4
 requests==2.24.0
 six==1.15.0
