--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 aigpy==2020.9.14.0
 alembic==1.5.4
 appdirs==1.4.4
+autoenv==1.0.0
 certifi==2020.6.20
+cffi==1.14.5
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 configparser==5.0.0
+cryptography==3.4.6
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
+Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
@@ -22,11 +26,17 @@ MarkupSafe==1.1.1
 marshmallow==3.10.0
 marshmallow-sqlalchemy==0.22.3
 mutagen==1.45.1
+ndg-httpsclient==0.5.1
 pipenv==2020.11.15
 prettytable==0.7.2
 psycopg2-binary==2.8.6
+pusher==3.0.0
+pyasn1==0.4.8
+pycparser==2.20
 pycryptodome==3.9.8
 pydub==0.24.1
+PyNaCl==1.4.0
+pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
