--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ flask-marshmallow==0.14.0
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
@@ -48,3 +49,4 @@ urllib3==1.25.10
 virtualenv==20.4.2
 virtualenv-clone==0.5.4
 Werkzeug==1.0.1
+WTForms==2.3.3
