--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ flask-marshmallow==0.14.0
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
@@ -32,6 +33,7 @@ prettytable==0.7.2
 psycopg2-binary==2.8.6
 pusher==3.0.0
 pyasn1==0.4.8
+pybase62==0.4.3
 pycparser==2.20
 pycryptodome==3.9.8
 pydub==0.24.1
@@ -48,3 +50,4 @@ urllib3==1.25.10
 virtualenv==20.4.2
 virtualenv-clone==0.5.4
 Werkzeug==1.0.1
+WTForms==2.3.3
