--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cryptography==3.4.6
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
+Flask-Alembic==2.0.1
 Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-Migrate==2.5.2
