--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,10 @@ Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+future==0.18.2
 gunicorn==20.0.4
+heroku.env==0.5.5
+heroku3==4.2.3
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
