--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.3
 future==0.18.2
-gunicorn==18.0.0
+gunicorn==18.0
 heroku.env==0.5.5
 heroku3==4.2.3
 idna==2.10
@@ -54,3 +54,4 @@ urllib3==1.25.10
 virtualenv==20.4.2
 virtualenv-clone==0.5.4
 Werkzeug==1.0.1
+WTForms==2.3.3
