--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,64 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-gunicorn = "*"
+gunicorn = "==18.0"
+aigpy = "==2020.9.14.0"
+alembic = "==1.5.4"
+appdirs = "==1.4.4"
+autoenv = "==1.0.0"
+certifi = "==2020.6.20"
+cffi = "==1.14.5"
+chardet = "==3.0.4"
+click = "==7.1.2"
+colorama = "==0.4.3"
+configparser = "==5.0.0"
+cryptography = "==3.4.6"
+distlib = "==0.3.1"
+filelock = "==3.0.12"
+flask-marshmallow = "==0.14.0"
+future = "==0.18.2"
+"heroku.env" = "==0.5.5"
+heroku3 = "==4.2.3"
+idna = "==2.10"
+itsdangerous = "==1.1.0"
+marshmallow = "==3.10.0"
+marshmallow-sqlalchemy = "==0.22.3"
+mutagen = "==1.45.1"
+ndg-httpsclient = "==0.5.1"
+pipenv = "==2020.11.15"
+prettytable = "==0.7.2"
+psycopg2 = "==2.8.4"
+psycopg2-binary = "==2.8.6"
+pusher = "==3.0.0"
+pyasn1 = "==0.4.8"
+pybase62 = "==0.4.3"
+pycparser = "==2.20"
+pycryptodome = "==3.9.8"
+pydub = "==0.24.1"
+python-dateutil = "==2.8.1"
+python-dotenv = "==0.15.0"
+python-editor = "==1.0.4"
+requests = "==2.24.0"
+six = "==1.15.0"
+tidal-dl = "==2020.9.10.0"
+urllib3 = "==1.25.10"
+virtualenv = "==20.4.2"
+virtualenv-clone = "==0.5.4"
+Flask = "==1.1.2"
+Flask-Alembic = "==2.0.1"
+Flask-Cors = "==3.0.10"
+Flask-Migrate = "==2.5.2"
+Flask-Script = "==2.0.6"
+Flask-SQLAlchemy = "==2.3.2"
+Flask-WTF = "==0.14.3"
+Jinja2 = "==2.11.3"
+Mako = "==1.1.4"
+MarkupSafe = "==1.1.1"
+PyNaCl = "==1.4.0"
+pyOpenSSL = "==20.0.1"
+SQLAlchemy = "==1.3.23"
+Werkzeug = "==1.0.1"
+WTForms = "==2.3.3"
 
 [dev-packages]
 
