--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aigpy==2020.9.14.0
 alembic==1.5.4
 appdirs==1.4.4
+attrs==22.2.0
 autoenv==1.0.0
 certifi==2020.6.20
 cffi==1.14.5
@@ -24,6 +25,7 @@ gunicorn==18.0
 heroku.env==0.5.5
 heroku3==4.2.3
 idna==2.10
+iniconfig==2.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
@@ -32,7 +34,9 @@ marshmallow==3.10.0
 marshmallow-sqlalchemy==0.22.3
 mutagen==1.45.1
 ndg-httpsclient==0.5.1
+packaging==23.0
 pipenv==2020.11.15
+pluggy==1.0.0
 prettytable==0.7.2
 psycopg2-binary==2.9.5
 pusher==3.0.0
@@ -43,6 +47,7 @@ pycryptodome==3.9.8
 pydub==0.24.1
 PyNaCl==1.4.0
 pyOpenSSL==20.0.1
+pytest==7.2.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
